buildscript {
    repositories {

        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7.38'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

configurations {
    shadow
}

minecraft {

    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    runs {

        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            lazyToken('minecraft_classpath') {
                configurations.shadow.copyRecursive().resolve()
                        .collect { it.absolutePath }.join(File.pathSeparator)
            }

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {

            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {

            workingDirectory project.file('run-data')

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"

    config "${mod_id}.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dir 'libs'
    }
    mavenCentral()
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name "FDD Maven"
        url "https://maven.firstdark.dev/releases"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
    compileOnly "dev.firstdark.discordrpc:discord-rpc:1.0.4"
    shadow "dev.firstdark.discordrpc:discord-rpc:1.0.4"

    implementation("org.jspecify:jspecify:1.0.0")

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.4"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.4")) {
        jarJar.ranged(it, "[0.5.4,)")
    }

    implementation("org.apache.commons:commons-compress:1.28.0")
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.codehaus.plexus:plexus-utils:4.0.3'
    implementation 'io.netty:netty-common:4.1.118.Final'
    implementation("io.netty:netty-handler:4.2.12.Final")
    implementation 'io.netty:netty-codec:4.1.125.Final'
    implementation 'com.google.guava:guava:33.0.0-jre'

    // TODO: switch to flatDir repository sum time - some mods have their shit disabled for 3rd party tho
    implementation fg.deobf(files("libs/goetydelight-1.2.0f2+20260225.jar"))
    implementation fg.deobf(files("libs/goety-2.5.50.2.jar"))
    implementation fg.deobf(files("libs/alexsmobs-1.22.9.jar"))
    implementation fg.deobf(files("libs/create-1.20.1-6.0.8.jar"))
    implementation fg.deobf(files("libs/irons_spellbooks-1.20.1-3.15.4.jar"))
    implementation fg.deobf(files("libs/EndingLibrary-1.20.1-2.1.12beta-all.jar"))
    implementation fg.deobf(files("libs/species-3.5.jar"))
    implementation fg.deobf(files("libs/covenant_of_the_seven-2.2.6-hotfix.jar"))
    implementation fg.deobf(files("libs/photon-forge-1.20.1-1.1.17.jar"))
    implementation fg.deobf(files("libs/hexerei-0.4.2.3.jar"))
    implementation fg.deobf(files("libs/l2damagetracker-0.4.3.jar"))
    implementation fg.deobf(fileTree(dir: 'libs', include: ['*.jar']))
}

shadowJar {
    archiveClassifier.set('all')
    configurations = [project.configurations.shadow]
    mergeServiceFiles()
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
                             forge_version       : forge_version, forge_version_range: forge_version_range,
                             loader_version_range: loader_version_range,
                             mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
                             mod_authors         : mod_authors, mod_description: mod_description,]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    dependsOn tasks.named('shadowJar')
    from({ zipTree(tasks.named('shadowJar').get().archiveFile.get().asFile) }) {
        exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",

                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${mod_id}.mixins.json"
        ])
    }

    finalizedBy 'reobfJar'
}

